// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should do nothing when target asset is not found: assets 1`] = `
[
  "js/main-8d84ad0c7f998ea39855.js",
  "js/secondary-206f81d3a8599c10683b.js",
  "js/main-8d84ad0c7f998ea39855.js.map",
  "js/secondary-206f81d3a8599c10683b.js.map",
]
`;

exports[`should replace the asset name correctly in dev mode: assets 1`] = `
[
  "js/main.js",
  "js/secondary.js",
  "js/main.js.map",
  "js/secondary.js.map",
]
`;

exports[`should replace the asset name correctly in prod mode: assets 1`] = `
[
  "js/main-c4fe40039b79c556e104.js",
  "js/secondary-206f81d3a8599c10683b.js",
  "js/main-c4fe40039b79c556e104.js.map",
  "js/secondary-206f81d3a8599c10683b.js.map",
]
`;

exports[`should replace the asset name correctly when replace is a string: assets 1`] = `
[
  "js/main.js",
  "js/secondary.js",
  "js/main.js.map",
  "js/secondary.js.map",
]
`;

exports[`should replace the asset name correctly when search is a regex: assets 1`] = `
[
  "js/main-c4fe40039b79c556e104.js",
  "js/secondary-206f81d3a8599c10683b.js",
  "js/main-c4fe40039b79c556e104.js.map",
  "js/secondary-206f81d3a8599c10683b.js.map",
]
`;
